# mcmlpy

./: .gitignore  CHANGELOG.rst  CITATION.cff  LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml  release.txt  setup.cfg  setup.py
.github/scripts/: update_citation.py
.github/workflows/: citation.yaml  pypi.yaml  test.yaml
docs/: conf.py  index.rst  lost-light.ipynb  mcml.ipynb  mcsub.ipynb  requirements.txt
mcmlpy/: __init__.py  mcml.py  mcmlv1.py  mcmlv2.py  mcsub.py
tests/: mc-lost-v1-0.Trc  mc-lost-v1-0.mci  mc-lost-v1-0.mco  mc-lost-v1-1.Rrc  mc-lost-v1-1.mci  mc-lost-v1-1.mco  mc-lost-v1-2.mci  mc-lost-v1-2.mco  mc-lost-v1-3.mci  mc-lost-v1-3.mco  mc-lost-v2-0.Tdrc  mc-lost-v2-0.mci  mc-lost-v2-0.mco  mc-lost-v2-1.Rdrc  mc-lost-v2-1.mci  mc-lost-v2-1.mco  mc-lost-v2-2.Rdrc  mc-lost-v2-2.mci  mc-lost-v2-2.mco  mc-lost-v2-3.Rdrc  mc-lost-v2-3.mci  mc-lost-v2-3.mco  test_mcml.py  test_mcmlv1.py  test_mcsub.py
