[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
lint.ignore = ["F403"]
exclude =['.git', '__pycache__', 'docs']

[tool.check-manifest]
ignore = [
    ".readthedocs.yaml",
    "docs/*",
    "Makefile",
    "release.txt",
    "requirements.txt",
]
